GadgetProject/SalesManagement/force-app/main/default/objects/Gadget__c/Gadget__c.object-meta.xml
<CustomObject>
    <label>Gadget</label>
    <nameField>
        <label>Gadget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gadgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>