GadgetProject/SalesManagement/force-app/main/default/objects/Gadget__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <label>Model Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>