GadgetProject/SalesManagement/force-app/main/default/objects/Gadget__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <label>Stock Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>