GadgetProject/SalesManagement/force-app/main/default/objects/Gadget__c/fields/Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period__c</fullName>
    <label>Warranty Period</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>